--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cron": "^1.7.1",
-    "dotenv": "^7.0.0"
+    "dotenv": "^7.0.0",
+    "moment": "^2.24.0",
+    "util": "^0.12.0"
   }
 }
