--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "debug": "DEBUG=dugoutService node app.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cron": "^1.7.1",
+    "debug": "^4.1.1",
     "dotenv": "^7.0.0",
     "moment": "^2.24.0",
     "util": "^0.12.0"
