--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     volumes:
      - .:/app/src
     restart: always
+    environment:
+      TZ: "America/Winnipeg"
 
 networks:
   default:
